--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "ajv": "^8.12.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "cy:open": "npx cypress open",
+    "cy:test": "npx cypress run",
+    "test": "npx cypress run"
   },
   "keywords": [],
   "author": "Lafaiete Machado",
