--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "cy:test": "npx cypress run",
     "test": "npx cypress run"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/lafaietemachado/api-stars-wars.git"
+  },
   "keywords": [],
   "author": "Lafaiete Machado",
   "license": "ISC"
