--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "cypress": "^13.2.0"
   },
   "devDependencies": {
-    "ajv": "^8.12.0"
+    "ajv": "^8.12.0",
+    "mochawesome": "^7.1.3"
   },
   "scripts": {
     "cy:open": "npx cypress open",
